test/files/errors/invalidExpr.jg
_main int ()
{
    array list_float = [1, 2, "3"];

    array.append();
    0 return;
}